# az-scout

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROMPTS.md  README.md  SECURITY.md  biome.json  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  copilot-review-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/chatmodes/: backend-engineer.chatmode.md  frontend-engineer.chatmode.md  plugin-reviewer.chatmode.md
.github/instructions/: cli.instructions.md  commit.instructions.md  docs.instructions.md  mcp-tools.instructions.md  plugin-api.instructions.md  plugin-author.instructions.md  scoring.instructions.md  tests.instructions.md
.github/prompts/: add-mcp-tool.prompt.md  add-plugin-to-catalog.prompt.md  add-route.prompt.md  bump-plugin-api.prompt.md  review-dependabot-pr.prompt.md  review-plugin.prompt.md  ship-code-change.prompt.md  tag-release.prompt.md  triage-issue.prompt.md
.github/workflows/: ci.yml  container.yml  msdo.yml  publish.yml
deploy/: AUTHENTICATION.md  EASYAUTH.md  createUiDefinition.json  main.bicep  main.example.bicepparam  main.json  setup-easyauth.sh
deploy/modules/: subscription-reader.bicep  subscription-spot-score.bicep
docs/: SCORING.md  api.md  architecture.md  features.md  getting-started.md  index.md  plugins.md  scoring.md
docs/_includes/: known-plugins.md
docs/ai/: mcp.md
docs/deployment/: aca.md  easyauth.md  obo-auth.md
docs/plugin-scaffold/: README.md  pyproject.toml
docs/plugin-scaffold/.github/: copilot-instructions.md
docs/plugin-scaffold/src/az_scout_example/: __init__.py  _log.py  routes.py  tools.py
docs/plugin-scaffold/src/az_scout_example/static/css/: example.css
docs/plugin-scaffold/src/az_scout_example/static/html/: example-tab.html
docs/plugin-scaffold/src/az_scout_example/static/js/: example-tab.js
docs/plugins/: catalog.md  index.md  scaffold.md
src/az_mapping/: __init__.py  __main__.py  app.py  azure_api.py  cli.py  mcp_server.py
src/az_mapping/models/: deployment_plan.py
src/az_mapping/services/: deployment_planner.py  intent_parser.py
src/az_mapping/static/css/: style.css
src/az_mapping/static/js/: app.js
src/az_mapping/templates/: index.html
src/az_scout/: __init__.py  __main__.py  app.py  auth.py  azure_api.py  cli.py  logging_config.py  mcp_server.py  plugin_api.py  plugin_manager.py  plugin_scaffold.py  plugins.py  recommended_plugins.json
src/az_scout/auth/: __init__.py  obo.py  security.py  settings.py
src/az_scout/azure_api/: __init__.py  _arm.py  _auth.py  _cache.py  _obo.py  _pagination.py  discovery.py  pricing.py  quotas.py  skus.py  spot.py
src/az_scout/internal_plugins/: __init__.py
src/az_scout/internal_plugins/planner/: __init__.py  chat_mode.py  routes.py  tools.py
src/az_scout/internal_plugins/planner/static/css/: planner.css
src/az_scout/internal_plugins/planner/static/html/: planner-tab.html
src/az_scout/internal_plugins/planner/static/js/: planner.js
src/az_scout/internal_plugins/topology/: __init__.py  routes.py  tools.py
src/az_scout/internal_plugins/topology/static/css/: topology.css
src/az_scout/internal_plugins/topology/static/html/: topology-tab.html
src/az_scout/internal_plugins/topology/static/js/: az-mapping.js
src/az_scout/models/: capacity_strategy.py  responses.py
src/az_scout/plugin_manager/: __init__.py  _github.py  _installer.py  _models.py  _operations.py  _pypi.py  _storage.py
src/az_scout/plugins/: __init__.py  api.py  bootstrap.py  discovery.py  registry.py
src/az_scout/plugins/public/: __init__.py  mcp_tools.py  router.py  services.py
src/az_scout/plugins/public/static/js/: public-signals.js
src/az_scout/routes/: __init__.py  auth.py  discovery.py  sku_detail.py
src/az_scout/scoring/: admission_confidence.py  deployment_confidence.py  fragmentation.py
src/az_scout/services/: _evaluation_helpers.py  admission_confidence.py  ai_chat.py  capacity_confidence.py  capacity_strategy_engine.py  deployment_planner.py  eviction_rate.py  fragmentation.py  intent_parser.py  region_latency.py  signal_collector.py  signal_store.py  volatility.py
src/az_scout/services/ai_chat/: __init__.py  _complete.py  _config.py  _dispatch.py  _prompts.py  _stream.py  _tools.py
src/az_scout/services/signals/: __init__.py  signal_collector.py  volatility.py
src/az_scout/static/css/: style.css
src/az_scout/static/html/: catalog.html  plugins.html
src/az_scout/static/js/: app.js  auth.js  az-mapping.js  chat.js  planner.js  plugins.js
src/az_scout/static/js/components/: sku-detail-modal.js
src/az_scout/templates/: index.html  login.html
tests/: conftest.py  test_admission_intelligence.py  test_ai_chat.py  test_auth.py  test_azure_api.py  test_capacity_confidence.py  test_capacity_strategy.py  test_deployment_confidence.py  test_deployment_plan.py  test_mcp_server.py  test_obo.py  test_plugin_manager.py  test_plugins.py  test_routes.py  test_scoring_iso.py
tests/e2e/: __init__.py  conftest.py  test_bootstrap.py  test_planner.py  test_strategy.py  test_topology.py
tests/fixtures/: compute_skus_sample.json  compute_usages_francecentral.json  retail_prices_sample.json
tools/docs_hooks/: catalog_wrapper.html  copy_changelog.py  pre_post_build.py
