[project]
name = "az-mapping"
dynamic = ["version"]
description = "Interactive web tool to visualize Azure Availability Zone logical-to-physical mappings across subscriptions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ludovic Rivallain" },
]
keywords = ["azure", "availability-zone", "mapping", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "flask>=3.0",
    "azure-identity>=1.15",
    "requests>=2.31",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/lrivallain/az-mapping"
Repository = "https://github.com/lrivallain/az-mapping"
Issues = "https://github.com/lrivallain/az-mapping/issues"

[project.scripts]
az-mapping = "az_mapping.app:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/az_mapping/_version.py"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.15",
    "types-requests>=2.31",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
exclude = ["src/az_mapping/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/az_mapping"]
