[project]
name = "az-scout"
dynamic = ["version"]
description = "Azure SKU scout — explore availability zones, capacity, pricing, and plan VM deployments across subscriptions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ludovic Rivallain" },
]
keywords = ["azure", "availability-zone", "mapping", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "azure-identity>=1.15",
    "requests>=2.31",
    "click>=8.1",
    "mcp[cli]>=1.9",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/lrivallain/az-scout"
Repository = "https://github.com/lrivallain/az-scout"
Issues = "https://github.com/lrivallain/az-scout/issues"

[project.scripts]
az-scout = "az_scout.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options.version_scheme = "calver-by-date"
raw-options.local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/az_scout/_version.py"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.15",
    "types-requests>=2.31",
    "pre-commit>=4.0",
    "pytest-playwright>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not e2e'"
markers = [
    "e2e: End-to-end UI tests (Playwright)",
]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:uvicorn",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
exclude = ["src/az_scout/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/az_scout"]
