[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "az-scout-example"
version = "0.1.0"
description = "Example plugin for az-scout"
requires-python = ">=3.11"
dependencies = [
    "az-scout",
    "fastapi",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "httpx>=0.28",
]

[project.entry-points."az_scout.plugins"]
example = "az_scout_example:plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/az_scout_example"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
